-------------------------------------------------
GearSwap 0.932 - Fixed bug that prevented gearswap from identifying items by their bag when worn. 
-------------------------------------------------
GearSwap 0.931 - Added support to exporting with custom file names. 
-------------------------------------------------
GearSwap 0.930 - Fixed a problem with player[bag][item_name].count in the user environment.
-------------------------------------------------
GearSwap 0.929 - Adjusted the print_set function to give preference and order to slot name keys.
-------------------------------------------------
GearSwap 0.928 - Changed how the outgoing equipment chunks were parsed due to a changing understanding of how the windower packet events work.
-------------------------------------------------
GearSwap 0.927 - Sped up equipment handling and made Rare items ignore augments.
-------------------------------------------------
GearSwap 0.926 - Simplified the equipment handling and used 0x117 incoming.
-------------------------------------------------
GearSwap 0.925 - Fixed minor problem that arose with the previous version's implementation of the equip history.
-------------------------------------------------
GearSwap 0.924 - Fixed problems that arose when attempting to equip two of the same item in two different slots. Changed how player equipment is handled.
-------------------------------------------------
GearSwap 0.923 - Added augments to //gs validate sets.
-------------------------------------------------
GearSwap 0.922 - Changed how the reload event works so it no longer causes stack problems.
-------------------------------------------------
GearSwap 0.921 - Split a buff overwriting itself off into a separate event, buff_refresh, and adjusted documentation.
-------------------------------------------------
GearSwap 0.920 - Made file_unload fire on load commands and changed its argument to be the previous file name.
-------------------------------------------------