@@ -1,4 +1,6 @@
 -------------------------------------------------
+GearSwap 0.933 - Adjusted how item use packets are chosen. 
+-------------------------------------------------
 GearSwap 0.932 - Fixed bug that prevented gearswap from identifying items by their bag when worn. 
 -------------------------------------------------
 GearSwap 0.931 - Added support to exporting with custom file names. 
